# PhaseBasedMotionMagnify

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: magnifier.hpp  preProcessor.hpp  spatialPyr.hpp  temporalFilter.hpp  threadFuncs.hpp
src/: magnifier.cpp  math_test.py  preProcessor.cpp  spatialPyr.cpp  temporalFilter.cpp  threadFuncs.cpp
